# alice-trade-bot

./: README.md  pyproject.toml
bot/: alice_bot.py  alice_selenium.py  calculations.py  quotation_client.py
bot/database/: dao.py  db.py
