[tool.poetry]
name = "alice"
version = "0.1.0"
description = "Alice is a bot that make day-trade operations"
authors = ["Eduardo <pythonbyte>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
mypy = "^0.812"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
